
 $Id$

 Версия 2.13
 ===========

 * Режим отладки по умолчанию отключен
 * Удалена устаревшая константа execScript



 Версия 2.12
 ===========

 * Начат переход на новое ядро - Eresus Core.
 * С введением в PHP 5.3 оператора goto использование функции goto стало невозможным. Поэтому в
   версии 2.12 эта функция была удалена. Вместо неё следует пользоваться HTTP::redirect или
   HTTP::goback.
 * Отключено gzip-сжатие файлов CSS и JS из-за переходна на новое ядро. В будущем планируется
   восстановить этот функционал