@@ -1,8 +1,7 @@
-#Fri Feb 05 19:31:52 MSK 2010
+#Fri Feb 05 19:47:13 MSK 2010
 eclipse.preferences.version=1
 encoding//db/mysql-4.sql=windows-1251
 encoding//db/mysql-5.sql=windows-1251
-encoding//main/cfg/main.php=windows-1251
 encoding//main/cfg/settings.php=windows-1251
 encoding//main/core/admin.css=windows-1251
 encoding//main/core/admin.php=windows-1251
