@@ -4,8 +4,11 @@
  Версия 2.13
  ===========
 
- * Режим отладки по умолчанию отключен
- * Удалена устаревшая константа execScript
+ * Вместо файла настроек cfg/main.php теперь в дистрибутиве есть шаблон cfg/main.template.php,
+   который требуется переименовать в cfg/main.php после установки.
+ * При открытии любой страницы CMS теперь информирует об отсутствующих файлах и неправильных правах.
+ * Режим отладки по умолчанию отключен.
+ * Удалена устаревшая константа execScript.
 
 
 
